--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@
 #server.port=8087
 #neo4j
 #spring.neo4j.uri=http://localhost:11008
-spring.neo4j.uri=bolt://localhost:11007
-spring.neo4j.authentication.username=yassine
-spring.neo4j.authentication.password=prime-ariel-snow-hair-oasis-632
+#spring.neo4j.uri=bolt://localhost:11007
+#spring.neo4j.authentication.username=yassine
+#spring.neo4j.authentication.password=prime-ariel-snow-hair-oasis-632
 
